fishes/k8s/resources-dev.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:  
  name: fishes-app
  labels:
    app: fishes-app
    group: micro-pet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fishes-app
      group: micro-pet
  template:
    metadata:
      labels:
        app: fishes-app
        group: micro-pet
    spec:
      containers:
        - name: fishes
          image: localregistry:5000/micropet/fishes:dev
          imagePullPolicy: Always
          ports:
            - name: fishes
              containerPort: 7007
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: fishes-service
  labels:
    app: fishes-app
    group: micro-pet
spec:
  ports:
    - protocol: TCP
      name: fishes
      port: 7007
  selector:
    app: fishes-app
    group: micro-pet
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: fishes-ingress    
spec:
  rules:
    - host: k8s.mytanzu.xyz
      http:
        paths:
          - path: /fishes
            backend:
              serviceName: fishes-service
              servicePort: 7007
